--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
     <body>
         <div id="react" />
-        <script src="./justintimer.js"></script>
+        <script src="dist/justintimer.js"></script>
     </body>
 </html>
