--- a/index.html
+++ b/index.html
@@ -1,4 +1,13 @@
 <html>
+    <head>
+        <link
+            rel="stylesheet"
+            href="dist/justintimer.css"
+            type="text/css"
+            media="screen"
+            charset="utf-8"
+        />
+    </head>
     <body>
         <div id="react" />
         <script src="dist/justintimer.js"></script>
