more working timer

--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
     <head>
         <link
             rel="stylesheet"
-            href="dist/justintimer.css"
+            href="./justintimer.css"
             type="text/css"
             media="screen"
             charset="utf-8"
@@ -10,6 +10,6 @@
     </head>
     <body>
         <div id="react" />
-        <script src="dist/justintimer.js"></script>
+        <script src="./justintimer.js"></script>
     </body>
 </html>
